src/tests/testfiles/const/2.txt
testfiles/const/2.c:6:5: error: cannot assign to variable 'b' with const-qualified type
b = a;
^
